Regression: Resize video in image editor does not update correctly #99332

Closed
opened 2022-07-02 01:24:41 +02:00 by Iliya Katushenock · 14 comments

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 496.49

Blender Version
Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-06-29 17:28, hash: 0ea282f746
Worked: 3.2

Caused by 9531eb24b3

Short description of error
Regression: Resize video in image editor does not update correctly

Exact steps for others to reproduce the error
To reproduce from scratch:

  • Open a video in an image editor in a new file.
  • Resize the current frame using the image resize operation two times.Regression: Resize video in image editor does not update correctly
  • The editor doesn't update.
  • Undo once.
  • The editor updates.

Original Report
2022-07-02 02-18-29.mp4

Enabled auto embedding of files in the project
Resizing may appear when undoing actions
It also seems strange that the video is not displayed
dsfbvrfvbz.blend

**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 496.49 **Blender Version** Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-06-29 17:28, hash: `0ea282f746` Worked: 3.2 Caused by 9531eb24b3 **Short description of error** Regression: Resize video in image editor does not update correctly **Exact steps for others to reproduce the error** To reproduce from scratch: - Open a video in an image editor in a new file. - Resize the current frame using the image resize operation two times.Regression: Resize video in image editor does not update correctly - The editor doesn't update. - Undo once. - The editor updates. **Original Report** [2022-07-02 02-18-29.mp4](https://archive.blender.org/developer/F13247132/2022-07-02_02-18-29.mp4) Enabled auto embedding of files in the project Resizing may appear when undoing actions It also seems strange that the video is not displayed [dsfbvrfvbz.blend](https://archive.blender.org/developer/F13247140/dsfbvrfvbz.blend)
Author
Member

Added subscriber: @mod_moder

Added subscriber: @mod_moder
Author
Member

This comment was removed by @mod_moder

*This comment was removed by @mod_moder*
Member

Added subscriber: @OmarEmaraDev

Added subscriber: @OmarEmaraDev
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Seems to be working correctly in 3.2, so looks like a regression.

To reproduce from scratch:

  • Open a video in an image editor in a new file.
  • Resize the current frame using the image resize operation two times.
  • The editor doesn't update.
  • Undo once.
  • The editor updates.
Seems to be working correctly in 3.2, so looks like a regression. To reproduce from scratch: - Open a video in an image editor in a new file. - Resize the current frame using the image resize operation two times. - The editor doesn't update. - Undo once. - The editor updates.
Omar Emara changed title from Image Editor: Resize video not updated correctly to Regression: Resize video in image editor does not update correctly 2022-07-04 09:23:39 +02:00
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Same as {#99356}?

Same as {#99356}?
Member

In #99332#1385658, @lichtwerk wrote:
Same as {#99356}?

Hm, maybe not, #99356 was broken in 3.2 already, checking further...

> In #99332#1385658, @lichtwerk wrote: > Same as {#99356}? Hm, maybe not, #99356 was broken in 3.2 already, checking further...
Member

Added subscriber: @brecht

Added subscriber: @brecht
Member

Caused by 9531eb24b3

CC @brecht

Caused by 9531eb24b3 CC @brecht

Added subscriber: @john-g-h-doe

Added subscriber: @john-g-h-doe

Hello, there is a patch here with a fix proposal: https://developer.blender.org/D15380

Hello, there is a patch here with a fix proposal: https://developer.blender.org/D15380

This issue was referenced by fc06b4c033

This issue was referenced by fc06b4c03356b5b9a272df8a2b96b6c4f9254ee7

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2022-07-07 21:02:16 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#99332
No description provided.