Fix T99332: Regression: Resize video in image editor does not update correctly