source/blender/editors/space_image/image_ops.c
@@ -197,18 +197,20 @@ static ImageUser *image_user_from_context(const bContext *C)
   return (sima) ? &sima->iuser : NULL;
 }
 
-static ImageUser image_user_from_active_tile(Image *ima)
+static void image_user_from_active_tile(Image *ima, ImageUser **iuser)
 {
-  ImageUser iuser;
-  BKE_imageuser_default(&iuser);
-
   /* Use the file associated with the active tile. Otherwise use the first tile. */
   if (ima && ima->source == IMA_SRC_TILED) {
     const ImageTile *active = (ImageTile *)BLI_findlink(&ima->tiles, ima->active_tile_index);
-    iuser.tile = active ? active->tile_number : ((ImageTile *)ima->tiles.first)->tile_number;
+    BKE_imageuser_default(*iuser);
+    if (active)
+      (*iuser)->tile = active->tile_number;
+    else
+      *iuser = NULL;
   }
-
-  return iuser;
+  else {
+    *iuser = NULL;
+  }
 }
 
 static bool image_from_context_has_data_poll(bContext *C)
@@ -233,9 +235,11 @@ static bool image_from_context_has_data_poll(bContext *C)
 static bool image_from_context_has_data_poll_active_tile(bContext *C)
 {
   Image *ima = image_from_context(C);
-  ImageUser iuser = image_user_from_active_tile(ima);
+  ImageUser tmp;
+  ImageUser *iuser = &tmp;
+  image_user_from_active_tile(ima, &iuser);
 
-  return BKE_image_has_ibuf(ima, &iuser);
+  return BKE_image_has_ibuf(ima, iuser);
 }
 
 static bool image_not_packed_poll(bContext *C)
@@ -1602,8 +1606,11 @@ static int image_file_browse_invoke(bContext *C, wmOperator *op, const wmEvent *
       }
     }
     else if (ima->source == IMA_SRC_TILED) {
-      ImageUser iuser = image_user_from_active_tile(ima);
-      BKE_image_user_file_path(&iuser, ima, filepath);
+      ImageUser tmp;
+      ImageUser *iuser = &tmp;
+      image_user_from_active_tile(ima, &iuser);
+      if (iuser != NULL)
+        BKE_image_user_file_path(iuser, ima, filepath);
     }
 
     WM_operator_properties_create_ptr(&props_ptr, ot);
@@ -2698,8 +2705,10 @@ void IMAGE_OT_new(wmOperatorType *ot)
 static int image_flip_exec(bContext *C, wmOperator *op)
 {
   Image *ima = image_from_context(C);
-  ImageUser iuser = image_user_from_active_tile(ima);
-  ImBuf *ibuf = BKE_image_acquire_ibuf(ima, &iuser, NULL);
+  ImageUser tmp;
+  ImageUser *iuser = &tmp;
+  image_user_from_active_tile(ima, &iuser);
+  ImBuf *ibuf = BKE_image_acquire_ibuf(ima, iuser, NULL);
   SpaceImage *sima = CTX_wm_space_image(C);
   const bool is_paint = ((sima != NULL) && (sima->mode == SI_MODE_PAINT));
 
@@ -2819,8 +2828,10 @@ void IMAGE_OT_flip(wmOperatorType *ot)
 static int image_invert_exec(bContext *C, wmOperator *op)
 {
   Image *ima = image_from_context(C);
-  ImageUser iuser = image_user_from_active_tile(ima);
-  ImBuf *ibuf = BKE_image_acquire_ibuf(ima, &iuser, NULL);
+  ImageUser tmp;
+  ImageUser *iuser = &tmp;
+  image_user_from_active_tile(ima, &iuser);
+  ImBuf *ibuf = BKE_image_acquire_ibuf(ima, iuser, NULL);
   SpaceImage *sima = CTX_wm_space_image(C);
   const bool is_paint = ((sima != NULL) && (sima->mode == SI_MODE_PAINT));
 
@@ -2943,10 +2954,12 @@ void IMAGE_OT_invert(wmOperatorType *ot)
 static int image_scale_invoke(bContext *C, wmOperator *op, const wmEvent *UNUSED(event))
 {
   Image *ima = image_from_context(C);
-  ImageUser iuser = image_user_from_active_tile(ima);
+  ImageUser tmp;
+  ImageUser *iuser = &tmp;
+  image_user_from_active_tile(ima, &iuser);
   PropertyRNA *prop = RNA_struct_find_property(op->ptr, "size");
   if (!RNA_property_is_set(op->ptr, prop)) {
-    ImBuf *ibuf = BKE_image_acquire_ibuf(ima, &iuser, NULL);
+    ImBuf *ibuf = BKE_image_acquire_ibuf(ima, iuser, NULL);
     const int size[2] = {ibuf->x, ibuf->y};
     RNA_property_int_set_array(op->ptr, prop, size);
     BKE_image_release_ibuf(ima, ibuf, NULL);
@@ -2957,8 +2970,10 @@ static int image_scale_invoke(bContext *C, wmOperator *op, const wmEvent *UNUSED
 static int image_scale_exec(bContext *C, wmOperator *op)
 {
   Image *ima = image_from_context(C);
-  ImageUser iuser = image_user_from_active_tile(ima);
-  ImBuf *ibuf = BKE_image_acquire_ibuf(ima, &iuser, NULL);
+  ImageUser tmp;
+  ImageUser *iuser = &tmp;
+  image_user_from_active_tile(ima, &iuser);
+  ImBuf *ibuf = BKE_image_acquire_ibuf(ima, iuser, NULL);
   SpaceImage *sima = CTX_wm_space_image(C);
   const bool is_paint = ((sima != NULL) && (sima->mode == SI_MODE_PAINT));
 
